Notebooks for free group and coxeter group

--- a/Coxeter.ipynb
+++ b/Coxeter.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "3abeca6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,10 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "afe48bb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "425321"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vertices = triangle_rep.isometries([\"ab\", \"bc\", \"ca\"]).fixed_point()\n",
     "fund_triangle = hyperbolic.Polygon(vertices)\n",
@@ -40,7 +42,8 @@
     "pos_isometries = triangle_rep.automaton_accepted(triangle_fsa, 30)\n",
     "\n",
     "basepoint = hyperbolic.Point((0,1), model=\"halfplane\")\n",
-    "orbit = pos_isometries @ basepoint"
+    "orbit = pos_isometries @ basepoint\n",
+    "len(orbit)"
    ]
   },
   {
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "42c576d3",
    "metadata": {},
    "outputs": [
@@ -105,9 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "8b09d2a6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -168,36 +173,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "5c655952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313\n"
+     ]
+    }
+   ],
    "source": [
     "crit_exp = b\n",
     "# Filter to unit interval\n",
-    "dirac_sum = np.sum([np.exp(-crit_exp * basepoint.distance(point)) for point in orbit \n",
-    "                    if abs(point.halfspace_coords()[0]) < 1 and abs(point.halfspace_coords()[0]) < 1e-8])"
+    "filtered = [point for point in orbit if abs(point.halfspace_coords()[0]) < 1 and abs(point.halfspace_coords()[0]) < 1e-3]\n",
+    "print(len(filtered))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "2743205d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.5468449493886033"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dirac_sum"
+    "dirac_sum = sum(np.exp(-crit_exp * basepoint.distance(point)) for point in filtered)\n",
+    "normalized = sum(np.exp(-crit_exp * basepoint.distance(point)) for point in orbit)\n",
+    "measure = dirac_sum / normalized\n",
+    "measure"
    ]
   }
  ],
